--- a/index.html
+++ b/index.html
@@ -117,8 +117,18 @@
         </div>
 
         <div class="box">
-            <span>100+</span>
+            <span>200+</span>
             <h3>gfg problems</h3>
+        </div>
+
+        <div class="box">
+            <span>100+</span>
+            <h3>Leetcode</h3>
+        </div>
+
+        <div class="box">
+            <span>3 Star</span>
+            <h3>Codechef</h3>
         </div>
 
     </div>
